[workspace]
resolver = "2"
members = [
    "crates/*",
    # "experiment/*",
]
default-members = [
    "crates/*"
]

[profile.release]
strip = true

[workspace.package]
version = "0.0.0-PR-0-0-SNAPSHOT"
edition = "2021"
authors = ["Cameron <cameron@drivenow.com.au>"]


# [patch.crates-io]
# embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "17851c7ed0b7ef0081e46b31bd30e6169fa3a611" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "17851c7ed0b7ef0081e46b31bd30e6169fa3a611" }

[workspace.dependencies]
# embassy-time = { version = "0.3.0", features = ["log", "std" ] }
# embassy-executor = { version = "0.5.0", features = [ "executor-thread", "log", "arch-std"] }

tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time","full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-retry = "0.3.0"
tokio-graceful = "0.1.6"
tokio-util = "0.7"

zenoh = "0.11.0-rc.3"
async-trait = "0.1"

embedded-hal = "1" # Adjust to the latest version
linux-embedded-hal = { version="0.4", features=["gpio_cdev"] }
# gpio-cdev = "0.2"
rppal = "0.12.0" # Only if you're running on a Raspberry Pi
